--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "purgecss": "^1.4.0",
+    "tailwindcss": "^1.1.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
