added scss to the project, imported fonts/icons, started to develop UI and created routes for level 1 main pages - queue, specialist and admin pages

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "node-sass": "^4.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -17,6 +18,8 @@
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "purgecss": "^1.4.0",
+    "sass-loader": "^7.1.0",
+    "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^1.1.2",
     "vue-template-compiler": "^2.6.10"
   }
