--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "date-fns": "^2.2.1",
     "node-sass": "^4.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
